slides: Add quotebox command

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -118,6 +118,8 @@
     \textcolor{red}{#1}
 }
 
+\newcommand{\quotebox}[1]{\begin{center}\fcolorbox{white}{blue!15!gray!15}{\begin{minipage}{0.9\linewidth}\vspace{10pt}\center\begin{minipage}{0.8\linewidth}{\space\Huge``}{#1}{\hspace{1.5em}\break\null\Huge\hfill''}\end{minipage}\smallbreak\end{minipage}}\end{center}}
+
 \date[August 24, 2020]{}
 
 \begin{document}
