slides: Add some extra commentary

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -603,6 +603,9 @@
                     % potential avenues to explore.
                 %    \todo{CONFIG\_SKB\_EXTENSIONS}
                 \item Consolidate datapath usage within primary subsystem~\medskip
+                    % Ie don't split half your logic into iptables. Embrace
+                    % eBPF if that's where you're at. Or embrace OVS if that's
+                    % what you use.
                 %\item \todo{tproxy eBPF - saved 16 bits of 32-bit mark} \bigskip
                 %\item \todo{floated - eBPF/xfrm} \bigskip
             \end{itemize}
