--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -188,6 +188,10 @@
         % xfrm mark - policy-based packet transform, eg key selection
         % pkt mark - exposed through OVS up through OVN in logical router
         %            policy.
+        %
+        % Also found SECMARK on my way here, but that seems to be an
+        % integration specifically with SELinux security contexts and AFAICT
+        % is not actually working with the mark.
         \begin{table}
             \begin{subtable}[l]{0.2\textwidth}
                 \begin{itemize}
@@ -216,7 +220,7 @@
         % So here's the beauty of the skb->mark. It's just some bits, which if
         % you're clued in enough on kernel networking, you can manipulate to
         % trigger various interesting paths and transfers state between different
-        % components.
+        % subsystems.
         %
         % So here's the thing, apparently no-one thought to write it all down.
         % Was the magic too fancy? Or is everyone embarrassed about their mark
@@ -355,6 +359,7 @@
             \end{itemize}
             \item Connection may not originate on the node~\medskip
             \item \{eBPF, OVS, netfilter\} -> netfilter~\medskip
+                % OVS here is OpenShift + OVN.
         \end{itemize}
     \end{frame}
 
@@ -556,7 +561,7 @@
             \item Can be a crutch~\medskip
                 % Starts out fixing this one hacky case, ends up with mark overload
             \item When you run out of bits, the ``fun'' starts~\medskip
-                % 
+                % Both from design perspective but also from deploy/debug cycle
         \end{itemize}
     \end{frame}
 
@@ -611,6 +616,21 @@
             \end{itemize}
         \end{itemize}
     \end{frame}
+
+    % There's some interesting angle here for Cilium's perspective. We've been
+    % able to flesh out a whole bunch of use cases by making use of the mark,
+    % occasionally maximising the number of bits such that some combinations of
+    % features cannot be enabled at the same time. The great thing here is that
+    % we can build out that support on any kernel version.
+    %
+    % Downsides: Debuggability, less ability to integrate due to mark overload,
+    % related: maintenance, education. More complex. Now we're starting to look
+    % at specific directions where we can extend eBPF to provide primitives
+    % that allow us to simplify (``remove boxes'' from arch diagram) and
+    % optimize performance by eliminating unnecessary infrastructure.
+    %
+    % One of the big angles we're looking at now is to move the last few bits
+    % of iptables usage into eBPF directly.
 
     \section*{Summary}
     \begin{frame}{Summary}
