--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -302,10 +302,12 @@
     % Let's clear out one of the most obvious cases which is built into core
     % Kubernetes itself (but also can be expanded on / replaced by CNI plugins).
     \begin{frame}{Network policy}
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 1 bit, two variations:~\smallskip
             \begin{itemize}
-                \item 1 bit -> drop~\footnote{Kubernetes default}~\smallskip
+                \item 1 bit -> drop~\textsuperscript{2}~\smallskip
                     % Honorable mention: Openstack does this, with the full
                     % 32 bits... because of course it does.
                 \item 1 bit -> allow~\medskip % Weave, others
@@ -316,9 +318,17 @@
                 % we'll get into in a bit
             \item Typically netfilter -> netfilter~\medskip
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{policy.png}
+            \end{subtable}
+        \end{table}
+        \blfootnote{\textsuperscript{2}~Kubernetes default}
     \end{frame}
 
     \begin{frame}{Transparent encryption}
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 2+ bits~\smallskip
             % {Cilium, Weave}
@@ -333,12 +343,19 @@
             \end{itemize}
         \item \{ eBPF, netfilter \} -> xfrm~\medskip
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{encryption.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     \begin{frame}{Virtual IP services}
         % Antrea: Redirect traffic towards service addresses into OVS
         %         Must be for handling host traffic(?).
         % TODO: Do we need to explain {HostPort / ExternalIPs / NodePort} ?
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 1+ bits, request DNAT~\smallskip
             \begin{itemize}
@@ -348,9 +365,16 @@
             \item \{ eBPF, netfilter \} -> routing -> netfilter~\medskip
             \item OVS -> routing -> OVS~\medskip
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{service.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     \begin{frame}{IP masquerade}
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 1+ bits, request SNAT~\smallskip
             \begin{itemize}
@@ -363,6 +387,11 @@
             \item \{eBPF, OVS, netfilter\} -> netfilter~\medskip
                 % OVS here is OpenShift + OVN.
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{scale.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     % Talking about multi-homing of the nodes themselves here, not container
@@ -376,6 +405,8 @@
     \begin{frame}{Multi-homing}
             % I called this 'network isolation' in the talk description.
         %\item Examples: \todo{aws-vpc-cni-k8s / Cilium}
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 1 bit, two variations:~\smallskip
             \begin{itemize}
@@ -390,6 +421,11 @@
             \end{itemize}
             \item \{ socket, netfilter \} -> routing~\medskip
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{clustermesh.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     \begin{frame}{Application identity}
@@ -411,6 +447,8 @@
         % a performance penalty there. Also this is stack integration cases so
         % if there are any other weird & wonderful use cases in between which
         % obscure the source IP, that approach would not be viable.
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item Variable bits~\smallskip
             \begin{itemize}
@@ -423,9 +461,16 @@
             \end{itemize}
             \item \{ eBPF, netfilter \} -> routing -> eBPF~\medskip
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{identity.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     \begin{frame}[fragile]{Service proxy}
+        \begin{table}
+            \begin{subtable}[l]{0.7\textwidth}
         \begin{itemize}
             \item 1+ bits depending on context~\smallskip
             \begin{itemize} % Cilium, Istio, AWS-appmesh
@@ -439,6 +484,11 @@
             \item netfilter -> routing
             \item socket -> \{ eBPF, netfilter \},
         \end{itemize}
+            \end{subtable}
+            \begin{subtable}[r]{0.2\textwidth}
+                \includegraphics[width=0.6\textwidth]{proxy.png}
+            \end{subtable}
+        \end{table}
     \end{frame}
 
     % Consider "honorary mentions" slide
